--- a/MoviesCyR/MoviesCyR.csproj
+++ b/MoviesCyR/MoviesCyR.csproj
@@ -72,6 +72,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reproducir\Play.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reproducir\Play.Designer.cs">
+      <DependentUpon>Play.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Consulta\Consulta.resx">
       <DependentUpon>Consulta.cs</DependentUpon>
     </EmbeddedResource>
@@ -94,6 +100,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reproducir\Play.resx">
+      <DependentUpon>Play.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -142,6 +151,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\1444067756_1-04.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BaseDsatos\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1444503163_video.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1444674093_folder-search.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1444681843_Gnome-Edit-Clear-64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Lapiz.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
