--- a/MoviesCyR/MoviesCyR.csproj
+++ b/MoviesCyR/MoviesCyR.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actores\RegistroAutores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Actores\RegistroAutores.Designer.cs">
+      <DependentUpon>RegistroAutores.cs</DependentUpon>
+    </Compile>
     <Compile Include="Consulta\Consulta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +63,24 @@
     </Compile>
     <Compile Include="Eliminar\Eliminar.Designer.cs">
       <DependentUpon>Eliminar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Estudios\RegistroEstudios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Estudios\RegistroEstudios.Designer.cs">
+      <DependentUpon>RegistroEstudios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Generos\Generos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Generos\Generos.Designer.cs">
+      <DependentUpon>Generos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Generos\ListarGen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Generos\ListarGen.Designer.cs">
+      <DependentUpon>ListarGen.cs</DependentUpon>
     </Compile>
     <Compile Include="Registro\rPeliculas.cs">
       <SubType>Form</SubType>
@@ -78,11 +102,23 @@
     <Compile Include="Reproducir\Play.Designer.cs">
       <DependentUpon>Play.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Actores\RegistroAutores.resx">
+      <DependentUpon>RegistroAutores.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Consulta\Consulta.resx">
       <DependentUpon>Consulta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Eliminar\Eliminar.resx">
       <DependentUpon>Eliminar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Estudios\RegistroEstudios.resx">
+      <DependentUpon>RegistroEstudios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Generos\Generos.resx">
+      <DependentUpon>Generos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Generos\ListarGen.resx">
+      <DependentUpon>ListarGen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Registro\rPeliculas.resx">
       <DependentUpon>rPeliculas.cs</DependentUpon>
@@ -166,6 +202,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Lapiz.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\38-24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\synchronize-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Actor_Male_Light.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\new-file.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\movies.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
